@@ -3,6 +3,7 @@
  * CSV and other delimited data.
  *   
  * Copyright (C) Bruce Dunwiddie bruce@csvreader.com
+ * Copyright (C) Olivier Haas git.oshaas@dfgh.net for small modifications, 2021
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -509,7 +510,7 @@ public class CsvReader {
 
 		// use headersHolder.Length here in case headers is null
 		for (int i = 0; i < headersHolder.Length; i++) {
-			headersHolder.IndexByName.put(headers[i], new Integer(i));
+			headersHolder.IndexByName.put(headers[i], Integer.valueOf(i));
 		}
 	}
 
@@ -1237,7 +1238,7 @@ public class CsvReader {
 			headersHolder.Headers[i] = columnValue;
 
 			// if there are duplicate header names, we will save the last one
-			headersHolder.IndexByName.put(columnValue, new Integer(i));
+			headersHolder.IndexByName.put(columnValue, Integer.valueOf(i));
 		}
 
 		if (result) {
